--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -898,19 +898,19 @@ button {
 .bg-top {
   //width:375px;
   height: 250px;
-  background: url('https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=1791099840,2902453580&fm=26&gp=0.jpg') no-repeat 0%;
+  background: url('../../static/images/dp.png') no-repeat 50%;
   background-size: cover;
 }
 .calendar {
   width:24px;
   height: 24px;
-  background: url('https://mtms.letsit.vip/storencp/icon_calendar.png') no-repeat 0%;
+  background: url('../../static/images/lucky.png') no-repeat 0%;
   background-size: cover;
 }
 .icon-delivery {
   width:24px;
   height: 24px;
-  background: url('https://mtms.letsit.vip/storencp/icon_delivery.png') no-repeat 0%;
+  background: url('../../static/images/welfare.png') no-repeat 0%;
   background-size: cover;
 }
 .icon-qrcode {
@@ -922,7 +922,7 @@ button {
 .order {
   width:24px;
   height: 24px;
-  background: url('https://mtms.letsit.vip/storencp/icon_order.png') no-repeat 0%;
+  background: url('../../static/images/dprize.png') no-repeat 0%;
   background-size: cover;
 }
 .queue-none {
